--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,7 +3,8 @@ PORT=5000
 NODE_ENV=development
 
 # Database
-MONGODB_URI=mongodb://localhost:27017/job-tracker
+MONGODB_URI=mongodb+srv://yashrajsherke49:Yashraj@nexus.q6moglr.mongodb.net/JobTrackerDB?retryWrites=true&w=majority
+MONGODB_NAME=JobTrackerDB
 
 # JWT
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
