--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,8 +3,8 @@ PORT=5000
 NODE_ENV=development
 
 # Database
-MONGODB_URI=mongodb+srv://yashrajsherke49:Yashraj@nexus.q6moglr.mongodb.net/JobTrackerDB?retryWrites=true&w=majority
-MONGODB_NAME=JobTrackerDB
+MONGODB_URI=mongodb+srv://YOUR_USERNAME:YOUR_PASSWORD@YOUR_CLUSTER.mongodb.net/YOUR_DATABASE?retryWrites=true&w=majority
+MONGODB_NAME=YOUR_DATABASE_NAME
 
 # JWT
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
