--- a/backend/.env.example
+++ b/backend/.env.example
@@ -34,7 +34,7 @@ JWT_EXPIRE=7d
 # Frontend URL for CORS (required in production)
 # Examples: 
 #   - Development: http://localhost:5173
-#   - Production: https://your-frontend-app.vercel.app
+#   - Production: https://job-application-tracker-m0c6de4uh-chut-burs-projects.vercel.app
 FRONTEND_URL=http://localhost:5173
 
 # ============================================
