--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,13 +1,21 @@
 # Server Configuration
 PORT=5000
-NODE_ENV=development
+NODE_ENV=production
 
 # Database
-MONGODB_URI=mongodb://localhost:27017/job-tracker
+# MongoDB Atlas connection string
+# Get this from: https://cloud.mongodb.com/
+MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/JobTrackerDB?retryWrites=true&w=majority
 
-# JWT
-JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+# JWT Configuration
+# Generate a secure secret with: node -e "console.log(require('crypto').randomBytes(64).toString('hex'))"
+JWT_SECRET=your-production-jwt-secret-here-generate-a-secure-one
 JWT_EXPIRE=7d
 
 # Frontend URL (for CORS)
-FRONTEND_URL=http://localhost:5173
+# Update this with your actual frontend URL after deployment
+# Examples:
+#   - Vercel: https://your-app.vercel.app
+#   - Netlify: https://your-app.netlify.app
+#   - Render: https://your-app.onrender.com
+FRONTEND_URL=https://your-frontend-url.com
