--- a/backend/package.json
+++ b/backend/package.json
@@ -11,38 +11,44 @@
     "test:watch": "jest --watch",
     "seed": "ts-node src/scripts/seed.ts"
   },
-  "keywords": ["job-tracker", "mern", "express", "mongodb"],
+  "keywords": [
+    "job-tracker",
+    "mern",
+    "express",
+    "mongodb"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^8.0.3",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "express-validator": "^7.0.1",
-    "dotenv": "^16.3.1",
     "csv-parser": "^3.0.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "json2csv": "^6.0.0-alpha.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.10.6",
     "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.5",
     "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.17",
-    "@types/multer": "^1.4.11",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
+    "@types/json2csv": "^5.0.7",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/multer": "^1.4.11",
+    "@types/node": "^20.10.6",
     "@types/supertest": "^6.0.2",
-    "typescript": "^5.3.3",
+    "jest": "^29.7.0",
+    "mongodb-memory-server": "^9.1.5",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.1",
-    "supertest": "^6.3.3",
-    "mongodb-memory-server": "^9.1.5"
+    "typescript": "^5.3.3"
   }
 }
