Add deployment configuration for Vercel and Render

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,12 +1,8 @@
-<<<<<<< HEAD
 # Frontend Environment Variables
 
-# Backend API URL
-# For development, this defaults to http://localhost:5000/api
-# For production, set this to your deployed backend URL
-# Example: VITE_API_URL=https://job-tracker-backend-xxxx.onrender.com/api
-VITE_API_URL=https://your-backend-url.onrender.com/api
-=======
-# Backend API URL
-VITE_API_URL=https://job-application-tracker-uqbn.onrender.com/api
->>>>>>> dda24cf964f4710fb8f675b1331c66e945c942df
+# API URL - Backend endpoint
+# For local development
+VITE_API_URL=http://localhost:5000/api
+
+# For production (Render backend)
+# VITE_API_URL=https://job-application-tracker-uqbn.onrender.com/api
